--- a/conteudo/capitulo4.tex
+++ b/conteudo/capitulo4.tex
@@ -541,7 +541,7 @@ A Figura \ref{mkCadastroAluno} é a interface gráfica de cadastro de um novo alun
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro de Aluno}
+	\caption{Interface Gráfica de Cadastro de Aluno}
 	\includegraphics[width=15cm]{mockups/1.png}
 	\label{mkCadastroAluno}
 	Fonte: (AUTOR, 2015)
@@ -558,21 +558,19 @@ Nessa interface gráfica o aluno preenche todos os campos abaixo:
 	\item Senha.
 	\item Repita a senha: nesse campo faz-se a verificação se a senha digitada anteriormente corresponde a essa.
 	\item Quem é você? Escolhe uma das opções disponíveis, como por exemplo: Aluno da \ac{UCS}.
-	\item País.
-	\item Estado: somente exibirá as opções depois que selecionar um País.
-	\item Cidade: somente exibirá as opções depois que selecionar um Estado.
+	\item Cidade: exibe todas cidades cadastradas pelo administrador.
 \end{itemize}
 
 Após o preenchimento de todos os campos, o alunos clica em ``Registrar" \ e seu cadastro estará realizado.
 
 \subsection{Autenticação}
 
-A Figura \ref{mkAutenticacao} é o protótipo de interface gráfica de autenticação.
+A Figura \ref{mkAutenticacao} é ainterface gráfica de autenticação.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Autenticação}
+	\caption{Interface Gráfica de Autenticação}
 	\includegraphics[width=15cm]{mockups/5.png}
 	\label{mkAutenticacao}
 	Fonte: (AUTOR, 2015)
@@ -587,12 +585,12 @@ O seu funcionamento é simples, o usuário preenche os campos de ``Usuário ou E-ma
 
 \subsection{Recuperação de Senha}
 
-A Figura \ref{mkRecuperacaoSenha} é o protótipo de interface gráfica de recuperação de senha.
+A Figura \ref{mkRecuperacaoSenha} é a interface gráfica de recuperação de senha.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Recuperação de Senha}
+	\caption{Interface Gráfica de Recuperação de Senha}
 	\includegraphics[width=15cm]{mockups/4.png}
 	\label{mkRecuperacaoSenha}
 	Fonte: (AUTOR, 2015)
@@ -607,12 +605,12 @@ Após o preenchimento do e-mail o usuário clica em ``Enviar", fazendo com que o s
 
 \subsection{Boas Vindas do Aluno}
 
-A Figura \ref{mkBoasVindasAlunos} é o protótipo de interface gráfica de Boas Vindas do Aluno.
+A Figura \ref{mkBoasVindasAlunos} é a interface gráfica de Boas Vindas do Aluno.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Boas Vindas do Aluno}
+	\caption{Interface Gráfica de Boas Vindas do Aluno}
 	\includegraphics[width=15cm]{mockups/2.png}
 	\label{mkBoasVindasAlunos}
 	Fonte: (AUTOR, 2015)
@@ -625,12 +623,12 @@ Essa interface gráfica é exibida após a autenticação com sucesso do Aluno. É exi
 
 \subsection{Boas Vindas ao Administrador e Professor}
 
-A Figura \ref{mkBoasVindasAdministrador} é o protótipo de interface gráfica de Boas Vindas do Administrador e Professor.
+A Figura \ref{mkBoasVindasAdministrador} é ainterface gráfica de Boas Vindas do Administrador e Professor.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Boas Vindas do Administrador e Professor}
+	\caption{Interface Gráfica de Boas Vindas do Administrador e Professor}
 	\includegraphics[width=15cm]{mockups/3.png}
 	\label{mkBoasVindasAdministrador}
 	Fonte: (AUTOR, 2015)
@@ -643,12 +641,12 @@ Essa interface gráfica é exibida após a autenticação com sucesso do Administrado
 
 \subsection{Problemas}\label{scListaProblemas}
 
-A Figura \ref{mkListaProblemas} é o protótipo de interface gráfica da listagem de problemas. Os problemas são agrupados por tipos de problemas.
+A Figura \ref{mkListaProblemas} é a interface gráfica da listagem de problemas. Os problemas são agrupados por tipos de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Problemas}
+	\caption{Interface Gráfica de Problemas}
 	\includegraphics[width=15cm]{mockups/6.png}
 	\label{mkListaProblemas}
 	Fonte: (AUTOR, 2015)
@@ -674,12 +672,12 @@ Essa interface gráfica possui as seguintes ações:
 
 \subsection{Tipo de Problema}
 
-A Figura \ref{mkNovoTipoProblema} é o protótipo de interface gráfica de cadastro de novo tipo de problema.
+A Figura \ref{mkNovoTipoProblema} é a interface gráfica de cadastro de novo tipo de problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Novo Tipo de Problema}
+	\caption{Interface Gráfica de Novo Tipo de Problema}
 	\includegraphics[width=15cm]{mockups/7.png}
 	\label{mkNovoTipoProblema}
 	Fonte: (AUTOR, 2015)
@@ -692,12 +690,12 @@ Nessa interface gráfica o administrador preenche somente um ``Nome" \  para o ti
 
 \subsection{Cadastro e Edição de Problema}
 
-A Figura \ref{mkNovoProblema} é o protótipo de interface gráfica de cadastro e/ou edição de um novo problema.
+A Figura \ref{mkNovoProblema} é a interface gráfica de cadastro e/ou edição de um novo problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Novo Problema}
+	\caption{Interface Gráfica de Novo Problema}
 	\includegraphics[width=15cm]{mockups/8.png}
 	\label{mkNovoProblema}
 	Fonte: (AUTOR, 2015)
@@ -719,12 +717,12 @@ Toda a ação nessa interface deve ser gravada ao clicar no botão ``Salvar".
 
 \subsection{Palavras-chave}\label{scPalavraChave}
 
-A Figura \ref{mkPalavrasChaves} é o protótipo de interface gráfica de cadastro e/ou edição de palavras-chave de um problema.
+A Figura \ref{mkPalavrasChaves} é a interface gráfica de cadastro e/ou edição de palavras-chave de um problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Palavras Chaves}
+	\caption{Interface Gráfica de Palavras Chaves}
 	\includegraphics[width=15cm]{mockups/9.png}
 	\label{mkPalavrasChaves}
 	Fonte: (AUTOR, 2015)
@@ -737,12 +735,12 @@ Nessa interface o administrador preenche o campo ``Palavra-chave" \  e clica em 
 
 \subsection{Dados de Testes}\label{scDadosTestes}
 
-A Figura \ref{mkDadosTestes} é o protótipo de interface gráfica de cadastro e/ou edição de dados de testes de um problema.
+A Figura \ref{mkDadosTestes} é a interface gráfica de cadastro e/ou edição de dados de testes de um problema.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Dados de Testes}
+	\caption{Interface Gráfica de Dados de Testes}
 	\includegraphics[width=15cm]{mockups/10.png}
 	\label{mkDadosTestes}
 	Fonte: (AUTOR, 2015)
@@ -755,12 +753,12 @@ Nessa interface o administrador preenche os campos ``Entrada" \ e ``Saída" \  e 
 
 \subsection{Visualização de Solução partindo da listagem de Problemas}
 
-A Figura \ref{mkVisualizacaoSolucao1} é o protótipo de interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido o caminho que foi utilizado para chegar a essa solução. Em outras interfaces que serão descritas no decorrer deste trabalho, esse caminho pode variar de acordo com o contexto do gerenciamento do portal de algoritmos.
+A Figura \ref{mkVisualizacaoSolucao1} é a interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido o caminho que foi utilizado para chegar a essa solução. Em outras interfaces que serão descritas no decorrer deste trabalho, esse caminho pode variar de acordo com o contexto do gerenciamento do portal de algoritmos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Visualização de Solução do Problema}
+	\caption{Interface Gráfica de Visualização de Solução do Problema}
 	\includegraphics[width=15cm]{mockups/11.png}
 	\label{mkVisualizacaoSolucao1}
 	Fonte: (AUTOR, 2015)
@@ -771,12 +769,12 @@ A Figura \ref{mkVisualizacaoSolucao1} é o protótipo de interface gráfica de visu
 
 \subsection{Lista de Grupos}
 
-A Figura \ref{mkListaGrupos} é o protótipo de interface gráfica de listagem dos grupos ja cadastrados. Essa listagem corresponde a todos os grupos, caso seja um administrador com total acesso, ou apenas aos grupos cadastrados por um professor, sendo que o professor somente terá na listagem os grupos que ele cadastrou.
+A Figura \ref{mkListaGrupos} é a interface gráfica de listagem dos grupos ja cadastrados. Essa listagem corresponde a todos os grupos, caso seja um administrador com total acesso, ou apenas aos grupos cadastrados por um professor, sendo que o professor somente terá na listagem os grupos que ele cadastrou.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Grupos}
+	\caption{Interface Gráfica de Grupos}
 	\includegraphics[width=15cm]{mockups/12.png}
 	\label{mkListaGrupos}
 	Fonte: (AUTOR, 2015)
@@ -800,12 +798,12 @@ Nessa interface gráfica possuímos as seguintes ações:
 
 \subsection{Cadastro e Edição de Grupo}
 
-A Figura \ref{mkCadastroGrupo} é o protótipo de interface gráfica de cadastro e edição de um grupo.
+A Figura \ref{mkCadastroGrupo} é a interface gráfica de cadastro e edição de um grupo.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro de Grupo}
+	\caption{Interface Gráfica de Cadastro de Grupo}
 	\includegraphics[width=15cm]{mockups/13.png}
 	\label{mkCadastroGrupo}
 	Fonte: (AUTOR, 2015)
@@ -827,12 +825,12 @@ A interface gráfica está dividida em três abas, Grupo, Participantes, Lista de P
 
 \subsection{Adicionar Participantes}
 
-A Figura \ref{mkParticipantes} é o protótipo de interface gráfica de associação de participantes em um grupo.
+A Figura \ref{mkParticipantes} é a interface gráfica de associação de participantes em um grupo.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro de Participantes no Grupo}
+	\caption{Interface Gráfica de Cadastro de Participantes no Grupo}
 	\includegraphics[width=15cm]{mockups/14.png}
 	\label{mkParticipantes}
 	Fonte: (AUTOR, 2015)
@@ -845,12 +843,12 @@ Utilizando os botões centrais, é possível adicionar ou remover participantes, po
 
 \subsection{Adicionar Lista de Problemas}
 
-A Figura \ref{mkGrupoListaProblemas} é o protótipo de interface gráfica de associação de lista de problemas em um grupo.
+A Figura \ref{mkGrupoListaProblemas} é a interface gráfica de associação de lista de problemas em um grupo.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro de Lista de Problemas no Grupo}
+	\caption{Interface Gráfica de Cadastro de Lista de Problemas no Grupo}
 	\includegraphics[width=15cm]{mockups/15.png}
 	\label{mkGrupoListaProblemas}
 	Fonte: (AUTOR, 2015)
@@ -863,12 +861,12 @@ Utilizando os botões centrais, é possível adicionar ou remover listas de problem
 
 \subsection{Visualização de Solução partindo da listagem de Grupos}
 
-A Figura \ref{mkVisualizacaoSolucao2} é o protótipo de interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido o caminho que foi utilizado para chegar a essa solução
+A Figura \ref{mkVisualizacaoSolucao2} é a interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido o caminho que foi utilizado para chegar a essa solução
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Visualização de Solução dos Grupos}
+	\caption{Interface Gráfica de Visualização de Solução dos Grupos}
 	\includegraphics[width=15cm]{mockups/16.png}
 	\label{mkVisualizacaoSolucao2}
 	Fonte: (AUTOR, 2015)
@@ -879,12 +877,12 @@ A Figura \ref{mkVisualizacaoSolucao2} é o protótipo de interface gráfica de visu
 
 \subsection{Lista de Alunos}
 
-A Figura \ref{mkListaAlunos} é o protótipo de interface gráfica da listagem de alunos.
+A Figura \ref{mkListaAlunos} é a interface gráfica da listagem de alunos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Listagem de Alunos}
+	\caption{Interface Gráfica de Listagem de Alunos}
 	\includegraphics[width=15cm]{mockups/17.png}
 	\label{mkListaAlunos}
 	Fonte: (AUTOR, 2015)
@@ -905,12 +903,12 @@ Nessa interface gráfica encontramos as seguintes ações:
 
 \subsection{Cadastro de Alunos}
 
-A Figura \ref{mkCadastroAlunoAdmin} é o protótipo de interface gráfica do cadastro e edição de alunos.
+A Figura \ref{mkCadastroAlunoAdmin} é a interface gráfica do cadastro e edição de alunos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro de Alunos}
+	\caption{Interface Gráfica de Cadastro de Alunos}
 	\includegraphics[width=15cm]{mockups/38.png}
 	\label{mkCadastroAlunoAdmin}
 	Fonte: (AUTOR, 2015)
@@ -923,12 +921,12 @@ A única informação que é necessário preencher é selecionar um Usuário sendo que 
 
 \subsection{Visualização de Solução partindo da listagem de Alunos}
 
-A Figura \ref{mkVisualizacaoSolucao3} é o protótipo de interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido  o caminho que foi utilizado para chegar a essa solução.
+A Figura \ref{mkVisualizacaoSolucao3} é a interface gráfica de visualização de uma solução de um problema. Podemos observar no topo da interface que é exibido  o caminho que foi utilizado para chegar a essa solução.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Visualização de Solução de Alunos}
+	\caption{Interface Gráfica de Visualização de Solução de Alunos}
 	\includegraphics[width=15cm]{mockups/18.png}
 	\label{mkVisualizacaoSolucao3}
 	Fonte: (AUTOR, 2015)
@@ -939,12 +937,12 @@ A Figura \ref{mkVisualizacaoSolucao3} é o protótipo de interface gráfica de visu
 
 \subsection{Listas de Problemas}
 
-A Figura \ref{mkListaProblemasListagem} é o protótipo de interface da listagem de listas de problemas. Essa interface apresenta todas as listas de problemas já cadastradas no portal de algoritmos.
+A Figura \ref{mkListaProblemasListagem} é a interface da listagem de listas de problemas. Essa interface apresenta todas as listas de problemas já cadastradas no portal de algoritmos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Problemas}
+	\caption{Interface Gráfica de Lista de Problemas}
 	\includegraphics[width=15cm]{mockups/23.png}
 	\label{mkListaProblemasListagem}
 	Fonte: (AUTOR, 2015)
@@ -965,12 +963,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Lista de Problemas}
 
-A Figura \ref{mkCadastroListaProblemas} é o protótipo de interface de cadastro e edição de lista de problemas.
+A Figura \ref{mkCadastroListaProblemas} é a interface de cadastro e edição de lista de problemas.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Lista de Problemas}
+	\caption{Interface Gráfica de Cadastro e Edição de Lista de Problemas}
 	\includegraphics[width=15cm]{mockups/25.png}
 	\label{mkCadastroListaProblemas}
 	Fonte: (AUTOR, 2015)
@@ -983,12 +981,12 @@ Para cadastrar ou editar, o administrador deve preencher um nome para lista e se
 
 \subsection{Visualização de Solução partindo da listagem de Listas de Problemas}
 
-A Figura \ref{mkVisualizacaoSolucao4} é o protótipo de inteface gráfica de uma solução de um problema. Podemos observar no topo da interface que é exibido  o caminho que foi utilizado para chegar a essa solução.
+A Figura \ref{mkVisualizacaoSolucao4} é a inteface gráfica de uma solução de um problema. Podemos observar no topo da interface que é exibido  o caminho que foi utilizado para chegar a essa solução.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Visualização de Solução de Lista de Problemas}
+	\caption{Interface Gráfica de Visualização de Solução de Lista de Problemas}
 	\includegraphics[width=15cm]{mockups/24.png}
 	\label{mkVisualizacaoSolucao4}
 	Fonte: (AUTOR, 2015)
@@ -999,12 +997,12 @@ A Figura \ref{mkVisualizacaoSolucao4} é o protótipo de inteface gráfica de uma s
 
 \subsection{Lista de Usuários}
 
-A Figura \ref{mkListaUsuario} é o protótipo de interface gráfica da listagem dos usuários. Essa interface lista todos os usuários cadastrados no portal de algoritmos, incluindo os inativos.
+A Figura \ref{mkListaUsuario} é a interface gráfica da listagem dos usuários. Essa interface lista todos os usuários cadastrados no portal de algoritmos, incluindo os inativos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Usuários}
+	\caption{Interface Gráfica de Lista de Usuários}
 	\includegraphics[width=15cm]{mockups/36.png}
 	\label{mkListaUsuario}
 	Fonte: (AUTOR, 2015)
@@ -1024,12 +1022,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Usuários}
 
-A Figura \ref{mkCadastroUsuario} é o protótipo de interface gráfica do cadastro e edição dos usuários.
+A Figura \ref{mkCadastroUsuario} é a interface gráfica do cadastro e edição dos usuários.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Usuários}
+	\caption{Interface Gráfica de Cadastro e Edição de Usuários}
 	\includegraphics[width=15cm]{mockups/37.png}
 	\label{mkCadastroUsuario}
 	Fonte: (AUTOR, 2015)
@@ -1042,12 +1040,12 @@ O administrador preenche todos os campos do cadastro e clica em ``Salvar". Após 
 
 \subsection{Lista de Administradores}
 
-A Figura \ref{mkListaAdministradores} é o protótipo de interface gráfica da listagem dos administradores.
+A Figura \ref{mkListaAdministradores} é a interface gráfica da listagem dos administradores.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Administradores}
+	\caption{Interface Gráfica de Lista de Administradores}
 	\includegraphics[width=15cm]{mockups/26.png}
 	\label{mkListaAdministradores}
 	Fonte: (AUTOR, 2015)
@@ -1067,12 +1065,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Administradores}
 
-A Figura \ref{mkCadastroAdministradores} é o protótipo de interface gráfica do cadastro e edição dos administradores.
+A Figura \ref{mkCadastroAdministradores} é a interface gráfica do cadastro e edição dos administradores.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Administradores}
+	\caption{Interface Gráfica de Cadastro e Edição de Administradores}
 	\includegraphics[width=15cm]{mockups/27.png}
 	\label{mkCadastroAdministradores}
 	Fonte: (AUTOR, 2015)
@@ -1085,12 +1083,12 @@ O administrador seleciona um usuário para cadastrar como administrador, podendo 
 
 \subsection{Lista de Professores}
 
-A Figura \ref{mkListaProfessores} é o protótipo de interface gráfica da listagem dos professores.
+A Figura \ref{mkListaProfessores} é a interface gráfica da listagem dos professores.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Professores}
+	\caption{Interface Gráfica de Lista de Professores}
 	\includegraphics[width=15cm]{mockups/28.png}
 	\label{mkListaProfessores}
 	Fonte: (AUTOR, 2015)
@@ -1110,12 +1108,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Professores}
 
-A Figura \ref{mkCadastroProfessores} é o protótipo de interface gráfica do cadastro e edição dos professores.
+A Figura \ref{mkCadastroProfessores} é a interface gráfica do cadastro e edição dos professores.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Professores}
+	\caption{Interface Gráfica de Cadastro e Edição de Professores}
 	\includegraphics[width=15cm]{mockups/29.png}
 	\label{mkCadastroProfessores}
 	Fonte: (AUTOR, 2015)
@@ -1128,12 +1126,12 @@ O administrador seleciona um usuário para cadastrar como professor, podendo tamb
 
 \subsection{Lista de Instituições}
 
-A Figura \ref{mkListaInstituicao} é o protótipo de interface gráfica da listagem das Instituições.
+A Figura \ref{mkListaInstituicao} é a interface gráfica da listagem das Instituições.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Instituições}
+	\caption{Interface Gráfica de Lista de Instituições}
 	\includegraphics[width=15cm]{mockups/30.png}
 	\label{mkListaInstituicao}
 	Fonte: (AUTOR, 2015)
@@ -1153,12 +1151,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Instituições}
 
-A Figura \ref{mkCadastroInstituicao} é o protótipo de interface gráfica do cadastro e edição de instituições.
+A Figura \ref{mkCadastroInstituicao} é a interface gráfica do cadastro e edição de instituições.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Instituições}
+	\caption{Interface Gráfica de Cadastro e Edição de Instituições}
 	\includegraphics[width=15cm]{mockups/31.png}
 	\label{mkCadastroInstituicao}
 	Fonte: (AUTOR, 2015)
@@ -1171,12 +1169,12 @@ O administrador preenche um nome e seleciona uma cidade para cadastrar ou editar
 
 \subsection{Lista de Permissões}
 
-A Figura \ref{mkListaInstituicao} é o protótipo de interface gráfica da listagem das Permissões.
+A Figura \ref{mkListaInstituicao} é a interface gráfica da listagem das Permissões.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Permissões}
+	\caption{Interface Gráfica de Lista de Permissões}
 	\includegraphics[width=15cm]{mockups/32.png}
 	\label{mkListaPermissao}
 	Fonte: (AUTOR, 2015)
@@ -1200,12 +1198,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Permissões}
 
-A Figura \ref{mkCadastroPermissao} é o protótipo de interface gráfica do cadastro e edição de permissões.
+A Figura \ref{mkCadastroPermissao} é a interface gráfica do cadastro e edição de permissões.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Permissões}
+	\caption{Interface Gráfica de Cadastro e Edição de Permissões}
 	\includegraphics[width=15cm]{mockups/33.png}
 	\label{mkCadastroPermissao}
 	Fonte: (AUTOR, 2015)
@@ -1218,12 +1216,12 @@ O administrador preenche um nome e uma descrição para cadastrar uma permissão. A
 
 \subsection{Lista de Grupos de Administradores}
 
-A Figura \ref{mkListaGrupoAdministradores} é o protótipo de interface gráfica da listagem das Grupos de Administradores.
+A Figura \ref{mkListaGrupoAdministradores} é a interface gráfica da listagem das Grupos de Administradores.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Lista de Grupos de Administradores}
+	\caption{Interface Gráfica de Lista de Grupos de Administradores}
 	\includegraphics[width=15cm]{mockups/34.png}
 	\label{mkListaGrupoAdministradores}
 	Fonte: (AUTOR, 2015)
@@ -1243,12 +1241,12 @@ Nessa interface gráfica temos as seguintes ações:
 
 \subsection{Cadastro e Edição de Grupos de Administradores}
 
-A Figura \ref{mkCadastroGrupoAdministradores} é o protótipo de interface gráfica do cadastro e edição de permissões.
+A Figura \ref{mkCadastroGrupoAdministradores} é a interface gráfica do cadastro e edição de permissões.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Grupos de Administradores}
+	\caption{Interface Gráfica de Cadastro e Edição de Grupos de Administradores}
 	\includegraphics[width=15cm]{mockups/35.png}
 	\label{mkCadastroGrupoAdministradores}
 	Fonte: (AUTOR, 2015)
@@ -1261,12 +1259,12 @@ O administrador preenche um nome, uma descrição e associa permissões a esse grup
 
 \subsection{Lista de Países, Estados e Cidades}
 
-A Figura \ref{mkListaPaises} é o protótipo de interface gráfica da listagem de países, estados e cidades cadastradas no portal de algoritmos.
+A Figura \ref{mkListaPaises} é a interface gráfica da listagem de países, estados e cidades cadastradas no portal de algoritmos.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Listagem de Países, Estados e Cidades}
+	\caption{Interface Gráfica de Listagem de Países, Estados e Cidades}
 	\includegraphics[width=15cm]{mockups/19.png}
 	\label{mkListaPaises}
 	Fonte: (AUTOR, 2015)
@@ -1292,12 +1290,12 @@ Nessa interface encontramos as seguintes ações:
 
 \subsection{Cadastro e Edição de País}
 
-A Figura \ref{mkCadastroPais} é o protótipo de interface gráfica do cadastro e edição de um País.
+A Figura \ref{mkCadastroPais} é a interface gráfica do cadastro e edição de um País.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de País}
+	\caption{Interface Gráfica de Cadastro e Edição de País}
 	\includegraphics[width=15cm]{mockups/20.png}
 	\label{mkCadastroPais}
 	Fonte: (AUTOR, 2015)
@@ -1310,12 +1308,12 @@ O administrador preenche o nome do País e sua Abreviação e clica em ``Salvar", a
 
 \subsection{Cadastro e Edição de Estado}
 
-A Figura \ref{mkCadastroEstado} é o protótipo de interface gráfica do cadastro e edição de um Estado.
+A Figura \ref{mkCadastroEstado} é a interface gráfica do cadastro e edição de um Estado.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Estado}
+	\caption{Interface Gráfica de Cadastro e Edição de Estado}
 	\includegraphics[width=15cm]{mockups/21.png}
 	\label{mkCadastroEstado}
 	Fonte: (AUTOR, 2015)
@@ -1328,12 +1326,12 @@ O administrador seleciona um País, preenche o nome do Estado e sua Abreviação e 
 
 \subsection{Cadastro e Edição de Cidade}
 
-A Figura \ref{mkCadastroEstado} é o protótipo de interface gráfica do cadastro e edição de uma Cidade.
+A Figura \ref{mkCadastroEstado} é a interface gráfica do cadastro e edição de uma Cidade.
 
 \FloatBarrier
 \begin{figure}[!htb]
 	\centering
-	\caption{Protótipo de Interface Gráfica de Cadastro e Edição de Cidade}
+	\caption{Interface Gráfica de Cadastro e Edição de Cidade}
 	\includegraphics[width=15cm]{mockups/22.png}
 	\label{mkCadastroCidade}
 	Fonte: (AUTOR, 2015)
